# Dashboard.Kern

./: CMakeLists.txt  CMakeSettings.json  README.md
CMake/: FindGIT2.cmake
Source/: main.cpp
Source/Git2/: Repository.cpp  Repository.h
Source/Json/: Json.h
Source/Manager/: InterOp.h  Manager.cpp  Manager.h  Warehouse.cpp  Workspace.cpp
Source/Utils/: Exception.cpp  Exception.h
